* Improved Permissions check and translation (#394)
* Fix sum of big numbers
* Fix validation command with long expressions